--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -35,4 +35,5 @@
     <color name="charcoal_grey">#33383c</color>
     <color name="white_40">#66ffffff</color>
     <color name="orange_yellow">#ffa905</color>
+    <color name="green_kda">#5AE792</color>
 </resources>
