--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -20,7 +20,7 @@
         <com.match.statistics.ui.custom.profile.LayoutProfile
             android:id="@+id/layout_profile"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="251dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -29,7 +29,7 @@
         <com.match.statistics.ui.custom.analysis.LayoutAnalysis
             android:id="@+id/layout_analysis"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="90dp"
             app:layout_constraintTop_toBottomOf="@id/layout_profile"
             android:layout_marginTop="8dp"
             />
@@ -37,11 +37,12 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rc_match_history"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginTop="4dp"
             android:orientation="vertical"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintTop_toBottomOf="@+id/layout_analysis"
+            app:layout_constraintBottom_toBottomOf="parent"
             tools:listitem="@layout/item_match" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
