--- a/app/src/main/res/values-night-v21/themes.xml
+++ b/app/src/main/res/values-night-v21/themes.xml
@@ -1,5 +1,5 @@
 <resources>
-    <style name="CompanySearch" parent="Theme.CompanySearch">
+    <style name="MatchStatistics" parent="Theme.MatchStatistics">
         <item name="android:windowTranslucentStatus">true</item>
     </style>
 </resources>
