--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.CompanySearch" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.MatchStatistics" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/grey_700</item>
         <item name="colorPrimaryVariant">@color/grey_500</item>
@@ -16,32 +16,6 @@
         <!-- Customize your theme here. -->
         <item name="android:textColorPrimary">@color/grey_200</item>
         <item name="android:textColorSecondary">@color/grey_500</item>
-    </style>
-
-    <style name="CompanySearch" parent="Theme.CompanySearch"/>
-
-    <style name="imageview_logo_rounded_corner">
-        <item name="cornerSize">10dp</item>
-    </style>
-
-    <style name="Review.Pros" parent="Theme.CompanySearch">
-        <item name="android:textColor">@color/light_blue_300</item>
-        <item name="android:textSize">18sp</item>
-    </style>
-    <style name="Review.Cons" parent="Theme.CompanySearch">
-        <item name="android:textColor">@color/red_500</item>
-        <item name="android:textSize">18sp</item>
-    </style>
-
-    <style name="Theme.CompanySearch.UnderLineView" parent="Theme.CompanySearch">
-        <item name="android:background">@color/grey_800</item>
-    </style>
-    <style name="Theme.Layout.Detail.BG" parent="Theme.CompanySearch">
-        <item name="android:background">@color/black</item>
-    </style>
-
-    <style name="Theme.Layout.Detail.Main" parent="Theme.CompanySearch">
-        <item name="android:background">@color/grey_900</item>
     </style>
 
 </resources>
