--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.CompanySearch" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.MatchStatistics" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/pale_grey_two</item>
-        <item name="colorPrimaryVariant">@color/green_700</item>
+        <item name="colorPrimaryVariant">@color/pale_grey</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
@@ -20,39 +20,16 @@
         <item name="android:lineSpacingExtra">0dp</item>
     </style>
 
-    <style name="CompanySearch" parent="Theme.CompanySearch"/>
-
-    <style name="Theme.CompanySearch.NoActionBar">
+    <style name="Theme.MatchStatistics.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="Theme.CompanySearch.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-    <style name="Theme.CompanySearch.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
     <style name="champion_spell_corner">
         <item name="cornerSize">4dp</item>
     </style>
 
-    <style name="Theme.CompanySearch.UnderLineView" parent="Theme.CompanySearch">
-        <item name="android:background">@color/grey_200</item>
-    </style>
-
-    <style name="Review.Pros" parent="Theme.CompanySearch">
-        <item name="android:textColor">@color/light_blue_500</item>
-        <item name="android:textSize">18sp</item>
-    </style>
-    <style name="Review.Cons" parent="Theme.CompanySearch">
-        <item name="android:textColor">@color/red_700</item>
-        <item name="android:textSize">18sp</item>
-    </style>
-
-    <style name="Theme.Layout.Detail.BG" parent="Theme.CompanySearch">
-        <item name="android:background">@color/grey_50</item>
-    </style>
-    <style name="Theme.Layout.Detail.Main" parent="Theme.CompanySearch">
-        <item name="android:background">@color/white</item>
-    </style>
 
     <style name="circleImageView" parent="">
         <item name="cornerFamily">rounded</item>
