--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -18,6 +18,8 @@
         <item name="android:textColorSecondary">@color/grey_600</item>
         <item name="android:includeFontPadding">false</item>
         <item name="android:lineSpacingExtra">0dp</item>
+
+        <item name="android:windowBackground">@color/pale_grey_two</item>
     </style>
 
     <style name="Theme.MatchStatistics.NoActionBar">
