--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -13,41 +13,34 @@
 
     </data>
 
-
-    <androidx.core.widget.NestedScrollView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/pale_grey_two"
-        >
+        android:layout_height="match_parent"
+        android:background="@color/pale_grey_two">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <com.match.statistics.ui.custom.profile.LayoutProfile
+            android:id="@+id/layout_profile"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <com.match.statistics.ui.custom.profile.LayoutProfile
-                android:id="@+id/layout_profile"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+        <com.match.statistics.ui.custom.analysis.LayoutAnalysis
+            android:id="@+id/layout_analysis"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@id/layout_profile" />
 
-            <com.match.statistics.ui.custom.analysis.LayoutAnalysis
-                android:id="@+id/layout_analysis"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@id/layout_profile" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rc_match_history"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_marginTop="4dp"
-                android:orientation="vertical"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                app:layout_constraintTop_toBottomOf="@+id/layout_analysis"
-                tools:listitem="@layout/item_match" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.core.widget.NestedScrollView>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rc_match_history"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="4dp"
+            android:orientation="vertical"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintTop_toBottomOf="@+id/layout_analysis"
+            tools:listitem="@layout/item_match" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
