--- a/app/src/main/res/layout/layout_analysis.xml
+++ b/app/src/main/res/layout/layout_analysis.xml
@@ -134,7 +134,7 @@
                         android:layout_height="30dp"
                         android:layout_marginHorizontal="8dp"
                         android:adjustViewBounds="true"
-                        android:scaleType="centerInside"
+                        android:scaleType="fitCenter"
                         android:src="@color/dark_grey"
                         app:shapeAppearanceOverlay="@style/circleImageView" />
 
@@ -143,7 +143,7 @@
                         android:layout_height="30dp"
                         android:layout_marginHorizontal="8dp"
                         android:adjustViewBounds="true"
-                        android:scaleType="centerInside"
+                        android:scaleType="fitCenter"
                         android:src="@color/dark_grey"
                         app:shapeAppearanceOverlay="@style/circleImageView" />
                 </TableRow>
