--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey_50">#FAFAFA</color>
@@ -15,15 +10,8 @@
     <color name="grey_700">#616161</color>
     <color name="grey_800">#424242</color>
     <color name="grey_900">#212121</color>
-    <color name="yellow_700">#FBC02D</color>
-    <color name="green_a700">#00C853</color>
-    <color name="green_700">#388E3C</color>
     <color name="shimmer_color">#C2C2C2</color>
     <color name="blue_grey_50">#ECEFF1</color>
-    <color name="light_blue_500">#03A9F4</color>
-    <color name="light_blue_300">#4FC3F7</color>
-    <color name="red_700">#D32F2F</color>
-    <color name="red_500">#F44336</color>
     <color name="pale_grey_two">#ebeef1</color>
     <color name="dark_grey">#1e2022</color>
     <color name="soft_blue">#5383e8</color>
@@ -36,4 +24,5 @@
     <color name="white_40">#66ffffff</color>
     <color name="orange_yellow">#ffa905</color>
     <color name="green_kda">#5AE792</color>
+    <color name="periwinkle">#8b68ff</color>
 </resources>
