--- a/app/src/main/res/layout/layout_profile.xml
+++ b/app/src/main/res/layout/layout_profile.xml
@@ -5,98 +5,167 @@
 
     <data>
 
-        <import type="java.util.List"/>
-        <import type="com.match.statistics.domain.model.lol.League"/>
+        <import type="java.util.List" />
 
-        <variable name="profileImageUrl" type="java.lang.String" />
-        <variable name="level" type="java.lang.Integer" />
-        <variable name="name" type="java.lang.String" />
-        <variable name="leagues" type="List&lt;League>" />
+        <import type="com.match.statistics.domain.model.lol.League" />
+
+        <variable
+            name="profileImageUrl"
+            type="java.lang.String" />
+
+        <variable
+            name="level"
+            type="java.lang.Integer" />
+
+        <variable
+            name="name"
+            type="java.lang.String" />
+
+        <variable
+            name="leagues"
+            type="List&lt;League>" />
     </data>
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="251dp"
-        tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout"
         android:background="@color/white"
-        >
+        tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">
 
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/img_user_icon"
-            android:layout_width="72dp"
-            android:layout_height="72dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="36dp"
-            android:adjustViewBounds="true"
-            android:scaleType="fitCenter"
-            app:layout_constraintEnd_toStartOf="@id/tv_user_id"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:shapeAppearanceOverlay="@style/circleImageView"
-            app:view_icon="@{profileImageUrl}"
-            tools:src="@color/darkish_pink" />
-
-
-        <TextView
-            android:layout_width="33dp"
-            android:layout_height="20dp"
-            android:layout_marginTop="62dp"
-            android:background="@drawable/bg_level"
-            android:gravity="center"
-            android:textColor="@color/white"
-            android:textSize="12sp"
-            app:layout_constraintEnd_toEndOf="@id/img_user_icon"
-            app:layout_constraintStart_toStartOf="@id/img_user_icon"
-            app:layout_constraintTop_toTopOf="@id/img_user_icon"
-            tools:text="247"
-            android:text="@{String.valueOf(level)}" />
-
-        <TextView
-            android:id="@+id/tv_user_id"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:fontFamily="sans-serif"
-            android:textColor="@color/dark_grey"
-            android:textSize="22sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@id/img_user_icon"
-            app:layout_constraintTop_toTopOf="@id/img_user_icon"
-            tools:text="Genetory"
-            android:text="@{name}"
-            />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_refresh"
-            android:layout_width="89dp"
-            android:layout_height="36dp"
-            android:layout_marginTop="8dp"
-            android:insetLeft="0dp"
-            android:insetTop="0dp"
-            android:insetRight="0dp"
-            android:insetBottom="0dp"
-            android:padding="0dp"
-            android:textSize="14sp"
-            app:backgroundTint="@color/soft_blue"
-            app:cornerRadius="20dp"
-            android:textAllCaps="false"
-            app:layout_constraintStart_toStartOf="@id/tv_user_id"
-            app:layout_constraintTop_toBottomOf="@id/tv_user_id"
-            android:text="@string/btn_refresh_statistics" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rc_rank_record"
+        <com.facebook.shimmer.ShimmerFrameLayout
+            android:id="@+id/shimmer_layout"
             android:layout_width="match_parent"
-            android:layout_height="82dp"
-            android:layout_marginBottom="20dp"
-            android:orientation="horizontal"
-            android:paddingStart="12dp"
-            android:paddingEnd="12dp"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_height="251dp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:leagues="@{leagues}"
-            tools:listitem="@layout/item_leagues" />
+            app:layout_constraintTop_toTopOf="parent">
 
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                >
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/shimmer_profile_icon"
+                android:layout_width="72dp"
+                android:layout_height="72dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="36dp"
+                android:adjustViewBounds="true"
+                android:background="@color/shimmer_color"
+                android:scaleType="fitCenter"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:shapeAppearanceOverlay="@style/circleImageView" />
+
+            <View
+                android:id="@+id/shimmer_user_id"
+                android:layout_width="100dp"
+                android:layout_height="28dp"
+                android:layout_marginStart="16dp"
+                android:background="@color/shimmer_color"
+                app:layout_constraintStart_toEndOf="@id/shimmer_profile_icon"
+                app:layout_constraintTop_toTopOf="@id/shimmer_profile_icon"
+                 />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/shimmer_btn"
+                android:layout_width="89dp"
+                android:layout_height="36dp"
+                android:layout_marginTop="8dp"
+                app:backgroundTint="@color/shimmer_color"
+                app:cornerRadius="20dp"
+                android:insetLeft="0dp"
+                android:insetTop="0dp"
+                android:insetRight="0dp"
+                android:insetBottom="0dp"
+                app:layout_constraintStart_toStartOf="@id/shimmer_user_id"
+                app:layout_constraintTop_toBottomOf="@id/shimmer_user_id" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </com.facebook.shimmer.ShimmerFrameLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/layout_items"
+            >
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/img_user_icon"
+                android:layout_width="72dp"
+                android:layout_height="72dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="36dp"
+                android:adjustViewBounds="true"
+                android:scaleType="fitCenter"
+                app:layout_constraintEnd_toStartOf="@id/tv_user_id"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:shapeAppearanceOverlay="@style/circleImageView"
+                app:view_icon="@{profileImageUrl}"
+                tools:src="@color/darkish_pink" />
+
+
+            <TextView
+                android:layout_width="33dp"
+                android:layout_height="20dp"
+                android:layout_marginTop="62dp"
+                android:background="@drawable/bg_level"
+                android:gravity="center"
+                android:text="@{String.valueOf(level)}"
+                android:textColor="@color/white"
+                android:textSize="12sp"
+                app:layout_constraintEnd_toEndOf="@id/img_user_icon"
+                app:layout_constraintStart_toStartOf="@id/img_user_icon"
+                app:layout_constraintTop_toTopOf="@id/img_user_icon"
+                tools:text="247" />
+
+            <TextView
+                android:id="@+id/tv_user_id"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:fontFamily="sans-serif"
+                android:text="@{name}"
+                android:textColor="@color/dark_grey"
+                android:textSize="22sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toEndOf="@id/img_user_icon"
+                app:layout_constraintTop_toTopOf="@id/img_user_icon"
+                tools:text="Genetory" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_refresh"
+                android:layout_width="89dp"
+                android:layout_height="36dp"
+                android:layout_marginTop="8dp"
+                android:insetLeft="0dp"
+                android:insetTop="0dp"
+                android:insetRight="0dp"
+                android:insetBottom="0dp"
+                android:padding="0dp"
+                android:text="@string/btn_refresh_statistics"
+                android:textAllCaps="false"
+                android:textSize="14sp"
+                app:backgroundTint="@color/soft_blue"
+                app:cornerRadius="20dp"
+                app:layout_constraintStart_toStartOf="@id/tv_user_id"
+                app:layout_constraintTop_toBottomOf="@id/tv_user_id" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rc_rank_record"
+                android:layout_width="match_parent"
+                android:layout_height="82dp"
+                android:layout_marginBottom="20dp"
+                android:orientation="horizontal"
+                android:paddingStart="12dp"
+                android:paddingEnd="12dp"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:leagues="@{leagues}"
+                tools:listitem="@layout/item_leagues" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
